--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -76,10 +76,9 @@ Pensa a cosa hai imparato.
       T'ho detto na roba tipo "dai proviamoci" e che "mi è stato detto che sono inaffidabile".
       Si è vero, me l'ha detto Norma durante la famosa chiamata in cui dice che mi sono agitata. 
       Pensa quanto c'è riuscita, uso le parole sue per infangarmi. 
-      Mi ha detto che ero inaffidabile perché se avessi dormito da te non mi sarei svegliata per le 10.
-      Credo di essermi lasciata andare alle associazioni sbagliate.
+      Mi ha detto che ero inaffidabile perché se avessi dormito da te non mi sarei svegliata per le 10 per andare a piccola Capri.
       Dovrei imparare a proteggermi meglio.
-      Mi auto violento.
+      Mi sento auto violentata.
 </p>
       
     <p><i>Fluido, in continua espansione</i></p>
