--- a/nonloso/a.html
+++ b/nonloso/a.html
@@ -79,6 +79,13 @@ Pensa a cosa hai imparato.
       Mi ha detto che ero inaffidabile perché se avessi dormito da te non mi sarei svegliata per le 10 per andare a piccola Capri.
       Dovrei imparare a proteggermi meglio.
       Mi sento auto violentata.
+      T'ho detto che recentemente qualcuno si è auto definito in un modo che in quel momento è stato per me rivelatore della loro identità.
+      Sta cosa me spaventa. Da quella persona quella parola non me l'aspettavo.
+      Si, ancora, proprio Norma si è definita <i>viscida</i>. 
+      Le è scappato dalla bocca.
+      Cristo dio. 
+      In quel momento le ho dato ragione.
+      Che paura.
 </p>
       
     <p><i>Fluido, in continua espansione</i></p>
