--- a/index.html
+++ b/index.html
@@ -107,15 +107,51 @@
                 <span class="mbr-iconfont socicon-github socicon" style="color: rgb(255, 255, 255); fill: rgb(255, 255, 255);"></span>
               </a>
             </div>
+
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Credits-->
-  <section data-bs-version="5.1" class="features3 cid-t1EZGBaNgR" id="features3-2m">
 
+  <section data-bs-version="5.1" class="contacts2 cid-t7rcMXfWbi" id="contacts2-2u">
+    <div class="container">
+      <div class="mbr-section-head">
+        <h3 class="mbr-section-title mbr-fonts-style align-center mb-0 display-5">
+          <strong>CONTACTS</strong>
+        </h3>
+      </div>
+      <div class="row justify-content-center mt-4">
+        <div class="card col-12 col-md-6">
+          <div class="card-wrapper">
+            <div class="image-wrapper">
+              <span class="mbr-iconfont mobi-mbri-phone mobi-mbri"></span>
+            </div>
+            <div class="text-wrapper">
+              <h6 class="card-title mbr-fonts-style mb-1 display-5">
+                <strong>Phone</strong>
+              </h6>
+              <p class="mbr-text mbr-fonts-style display-7"><a href="https://wa.me/447565032166" class="text-primary">+44 7565032166</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="card col-12 col-md-6">
+          <div class="card-wrapper">
+            <div class="image-wrapper">
+              <span class="mbr-iconfont mobi-mbri-letter mobi-mbri"></span>
+            </div>
+            <div class="text-wrapper">
+              <h6 class="card-title mbr-fonts-style mb-1 display-5">
+                <strong>Email</strong>
+              </h6>
+              <p class="mbr-text mbr-fonts-style display-7"><a href="mailto:gabrielavelitch@gmail.com" class="text-primary">gabrielavelitch@gmail.com</a></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <!-- Footer-->
