--- a/index.html
+++ b/index.html
@@ -165,6 +165,23 @@
     <p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Designed with <a href="https://mobirise.site/b" style="color:#aaa;">Mobirise</a> site themes</p>
   </section>
 
+  </main>
+
+  <footer class="footer">
+    <div class="container row" style="justify-content:space-between;">
+      <div class="row"><img src="https://ergodika.it/assets/images/favicon-96x96.png" width="96" height="96" alt=""><span>© <span id="year"></span> Ergodika</span></div>
+      <div class="row"><a href="dark-event.html"></a><a href="light-corsi.html"></a></div>
+    </div>
+
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear()
+    </script>
+  </footer>
+
+
+  <script>
+    includeHTML();
+  </script>
 
   <script src="https://www.gabrielavelitch.com/assets/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="https://www.gabrielavelitch.com/assets/parallax/jarallax.js"></script>
