l_unione_fa_la_forza

--- a/tools.html
+++ b/tools.html
@@ -98,8 +98,8 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-10">
           <h1 class="mbr-section-title mbr-fonts-style mb-3 display-5"><strong></strong></h1>
-          <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-1" style="text-align:center;"><strong>Sono troppo giovane per insegnare</strong></h2>
-          <p class="mbr-text mbr-fonts-style mb-3 display-5" style="text-align:center;">Ho da fare</p>
+          <h2 class="mbr-section-subtitle mbr-fonts-style mb-3 display-1" style="text-align:center;"><strong>Se serve qualcosa ne possiamo parlare</strong></h2>
+          <p class="mbr-text mbr-fonts-style mb-3 display-5" style="text-align:center;">e costruirlo insieme</p>
 
           <div class="social-row display-7 mt-5" style="text-align:center;">
             <div class="soc-item">
