--- a/assets/internals/gkv_nav.html
+++ b/assets/internals/gkv_nav.html
@@ -37,11 +37,11 @@
         <ul class="navbar-nav nav-dropdown nav-right" data-app-modern-menu="true">
           <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://ergodika.it/">PROJECTS</a>
           </li>
-          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/tools.html">TOOLS</a>
+          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/tools.html">TOOLS</a>
           </li>
           <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/learn.html">LEARN</a>
           </li>
-          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/pages/about.html">ABOUT ME</a>
+          <li class="nav-item"><a class="nav-link link text-white text-primary display-4" href="https://www.gabrielavelitch.com/.html">ABOUT ME</a>
           </li>
         </ul>
       </div>
