--- a/index.html
+++ b/index.html
@@ -167,16 +167,8 @@
 
   </main>
 
-  <footer class="footer">
-    <div class="container row" style="justify-content:space-between;">
-      <div class="row"><img src="https://ergodika.it/assets/images/favicon-96x96.png" width="96" height="96" alt=""><span>© <span id="year"></span> Ergodika</span></div>
-      <div class="row"><a href="dark-event.html"></a><a href="light-corsi.html"></a></div>
-    </div>
-
-    <script>
-      document.getElementById('year').textContent = new Date().getFullYear()
-    </script>
-  </footer>
+  <!-- Footer-->
+  <div w3-include-html="https://www.gabrielavelitch.com/assets/internals/gkv_footer.html"></div>
 
 
   <script>
